--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,6 +31,8 @@ steps:
   displayName: 'Write build info'
   workingDirectory: $(wwwrootDir)
 
+- bash: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
+
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
   inputs:
