--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ steps:
   workingDirectory: $(wwwrootDir)
 
 - bash: echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
+  displayName: 'Write build info NR. 2'
 
 - task: DotNetCoreCLI@2
   displayName: 'Restore project dependencies'
