--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,8 +31,10 @@ steps:
   displayName: 'Write build info'
   workingDirectory: $(wwwrootDir)
 
-- bash: 'echo "Variante mit bash, um was rauszuschreiben" \
-    echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt'
+- bash: |
+    set -x
+    echo "Variante mit bash, um was rauszuschreiben"
+    echo "$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)" > buildinfo.txt
   displayName: 'Write build info NR. 2'
 
 - task: DotNetCoreCLI@2
