--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,9 +31,7 @@ steps:
   displayName: 'Write build info'
   workingDirectory: $(wwwrootDir)
 
-- bash: "echo \"Variante mit bash, um was rauszuschreiben\" \\n
-    echo \"$(Build.DefinitionName), $(Build.BuildId), $(Build.BuildNumber)\" > buildinfo.txt \\n
-    echo \"Das hat geklappt\""
+- bash: "echo \"Variante mit bash, um was rauszuschreiben\""
   failOnStderr: true
   name: WritebuildIinfoNR_2
 
