Test double quotes 3

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,8 @@ steps:
   displayName: 'Write build info'
   workingDirectory: $(wwwrootDir)
 
-- bash: "echo \"Variante mit bash, um was rauszuschreiben\""
+- bash: "echo \"Variante mit bash, um was rauszuschreiben\"
+         echo \"Variante mit bash, um was rauszuschreiben\""        
   failOnStderr: true
   name: WritebuildIinfoNR_2
 
