--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,13 +31,10 @@ steps:
   displayName: 'Write build info'
   workingDirectory: $(wwwrootDir)
 
-- bash: "
-    echo \"Variante mit bash, um was rauszuschreiben\" \n
-    echo \"Variante mit bash, um was rauszuschreiben\"
-
-    echo \"Variante mit bash, um was rauszuschreiben\"
+- bash: |
+    echo "Variante mit bash, um was rauszuschreiben" 
+    echo "Variante mit bash, um was rauszuschreiben" 
     exit 1
-    "        
   failOnStderr: true
   name: WritebuildIinfoNR_2
 
