--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,4 +56,4 @@ steps:
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: drop'
-    condition: succeeded()ild $(buildConfiguration)'
+    condition: succeeded()
